src/math_ops/snapshots/rbx_types_ops__math_ops__vec2__vec2_modulus_vec2.snap
---
source: src/math_ops/vec2.rs
expression: "Vector2::new(15.0, 15.0).modulus(&Vector2::new(5.0, 10.0).into())"
---
Vector2:
  - 0
  - 5
