src/math_ops/snapshots/rbx_types_ops__math_ops__vec2__vec2_pow_f32.snap
---
source: src/math_ops/vec2.rs
expression: "Vector2::new(15.0, 15.0).pow(&5f32.into())"
---
Vector2:
  - 759375
  - 759375
